--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
          }
     },
     "minimum-stability": "beta",
-    "require": {}
+    "require": {
+        "doctrine/orm": "^2.6.2",
+        "symfony/yaml": "2.*"
+    }
 }
