--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
     },
     "minimum-stability": "beta",
     "require": {
-        "doctrine/orm": "^2.6.2",
-        "symfony/yaml": "2.*"
+        "illuminate/database": "v5.8.36"
     }
 }
